# dataclassic

./: .gitignore  .pycodestyle  build-release.ps1  dataclassic_examples.ipynb  find_imports.py  pyproject.toml  readme.rst  setup.py  update_version.py  version_maker.py
dataclassic/: __init__.py  commandline.py  dataclasses.py  dataclasses_ext.py  dctables.py  doc_store.py  encoders.py  pyarray.py  sql_helper.py  tables.py  version.py
dataclassic/obsolete/: orm.py  sqlalchemy_collections.py  tables_old.py
tests/: _test_commandline_help.py  _test_setup.py  _test_tools.py  test_commandline.py  test_dctables.py  test_docstore.py  test_pyarray.py  test_tables.py  test_validation.py
