[tool.poetry]
name = "dataclassic"
version = "0.1.0"
description = "Making dataclasses even more awesome"
authors = ["Brad Campbell <brakedust7@proton.mail>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
