[tool.poetry]
name = "dataclassic"
version = "0.1.8"
description = "Making dataclasses even more awesome"
authors = ["Brakedust <brakedust7@proton.mail>"]

[tool.poetry.urls]
"Source Code" = "https://github.com/brakedust/dataclassic"

[tool.poetry.dependencies]
python = "^3.10"
openpyxl = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
